# hex-OS

./: README.md
OSD/: CMakeLists.txt  main.qml  osd-client.cpp  osd-server.cpp
SDDL/: CMakeLists.txt  build.sh  lockmanager.cpp  lockmanager.h  main.cpp  qml.qrc
SDDL/qml/: main.qml
hexlauncher/: CMakeLists.txt  build.sh  launch.sh  list-windows  main.cpp  main.qml  nmqt  resources.qrc
hexlauncher/Components/: HelpDialog.qml  HexBattery.qml  HexClock.qml  HexNetwork.qml  HexPower.qml  HexWeather.qml  SciFiGridBackground.qml  SinWaveBackground.qml
hot-corner/: CMakeLists.txt  main.cpp  main.qml
nm-qt/: CMakeLists.txt  main.cpp
qt-wall-xml2/: CMakeLists.txt  main.cpp
switcher/: CMakeLists.txt  main.cpp  wlr-foreign-toplevel-management-unstable-v1-protocol.c
